# simple_upload

./: .dockerignore  .gitignore  BackDockerFile  DockerFile  FrontDockerfile  docker-compose.yml  nginx.conf
backend/: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a058d0b2a495_init.py
backend/apps/: router.py
backend/apps/file_app/api/: router.py
backend/apps/file_app/api/v1/: core.py
backend/apps/file_app/models/: __init__.py  file_info.py
backend/apps/file_app/schema/: file_info.py
backend/apps/file_app/services/: crdu.py  file_service.py
backend/common/: conf.py  log.py  model.py  mysql_curd.py  path_conf.py  registrar.py
backend/common/exceptions/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/databases/: async_db_mysql.py  async_db_redis.py  sync_db_mysql.py  sync_db_redis.py
backend/middleware/: access_middleware.py
backend/test_api/: test_crud.py  test_upload.py
backend/utils/: encrypt.py  health_check.py  re_verify.py  serializers.py  timezone.py  tools.py  type_conversion.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/apis/: axios.js  fileApi.js
frontend/src/assets/js/: global.js
frontend/src/router/: index.js
frontend/src/views/: FileUpload.vue  Home.vue  ListFile.vue
frontend/vite/plugins/: svg-icon.js
